# aipp

./: .gitignore  .prettierrc  AGENT.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/artifacts/templates/react/: README.md  bunfig.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/artifacts/templates/react/src/: App.tsx  UserComponent.tsx  index.css  index.html  index.tsx
src-tauri/artifacts/templates/react/styles/: globals.css
src-tauri/artifacts/templates/vue/: package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/artifacts/templates/vue/src/: App.vue  UserComponent.vue  main.ts
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  main.rs  window.rs
src-tauri/src/api/: ai_api.rs  ai_api_v1.rs  artifacts_api.rs  artifacts_collection_api.rs  assistant_api.rs  attachment_api.rs  builtin_mcp_api.rs  conversation_api.rs  genai_client.rs  llm_api.rs  mcp_api.rs  mcp_execution_api.rs  mod.rs  sub_task_api.rs  tests.rs
src-tauri/src/api/ai/: chat.rs  config.rs  conversation.rs  events.rs  mcp.rs  mcp_events.rs  mod.rs  title.rs  types.rs
src-tauri/src/api/builtin_mcp/: mod.rs  templates.rs
src-tauri/src/api/builtin_mcp/search/: browser.rs  engine_manager.rs  engines.rs  fetcher.rs  fingerprint.rs  handler.rs  mod.rs  types.rs
src-tauri/src/api/llm/: anthropic.rs  cohere.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/api/tests/: ai_api_tests.rs  chat_tests.rs  conversation_api_tests.rs  integration_tests.rs  mod.rs  regenerate_tests.rs
src-tauri/src/artifacts/: applescript.rs  artifacts_db.rs  code_utils.rs  collection_api.rs  env_installer.rs  mod.rs  powershell.rs  preview_router.rs  react_preview.rs  react_runner.rs  shared_components.rs  vue_preview.rs  vue_runner.rs
src-tauri/src/db/: artifacts_collection_db.rs  artifacts_db.rs  assistant_db.rs  conversation_db.rs  llm_db.rs  mcp_db.rs  mod.rs  plugin_db.rs  sub_task_db.rs  system_db.rs  tests.rs
src-tauri/src/mcp/: builtin_api.rs  detection.rs  execution_api.rs  mcp_db.rs  mod.rs  prompt.rs  registry_api.rs
src-tauri/src/mcp/builtin_mcp/: mod.rs  templates.rs
src-tauri/src/mcp/builtin_mcp/search/: browser.rs  (+6 more)
src-tauri/src/state/: message_token.rs
src-tauri/src/template_engine/: mod.rs  tests.rs
src-tauri/src/utils/: bun_utils.rs  db_utils.rs  mod.rs  share_utils.rs  uv_utils.rs  window_utils.rs
(+218 files in other folders)
