[package]
name = "Aipp"
version = "0.1.0"
description = "Chat with LLM use powerful tools"
authors = ["xieisabug"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zip-extract = "0.1.2"
dirs = "5.0.1"
tauri = { version = "2", features = [ "test", "protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json", "stream", "blocking"] }
htmd = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11" }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
get-selected-text = "0.1.6"
config = "0.14.0"
futures = "0.3.30"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.5"
thiserror = "1.0.63"
semver = "1.0"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0"
base64 = "0.22"
mime_guess = "2.0"
open = "3.0"
mockito = "0.31"
screenshots = "0.8"
image = "0.25"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
genai = { git = "https://github.com/xieisabug/rust-genai.git", rev="02d13b2af9e73919c420cfae166ce600c9c79f72" }
rmcp = { version = "0.2.1", features = [
    "client",
    "transport-io",
    "transport-sse-client", 
    "transport-streamable-http-client",
    "transport-child-process",
    "reqwest"
] }
[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut =  { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[dev-dependencies]
rstest = "0.18"
tokio-test = "0.4"
tempfile = "3.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
